tests/ui/traits/const-traits/call-const-closure.stderr
error[E0277]: the trait bound `(): [const] Bar` is not satisfied
  --> $DIR/call-const-closure.rs:17:18
   |
LL |     (const || ().foo())();
   |                  ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
